# solarchallenge

./: Demo.ipynb  Demo_short.ipynb  README.md  Teste.py  code_example.py  main.py  pyproject.toml  t.py
.github/workflows/: CI.yml
src/OC-solar/: model.py
src/OC-solar/bodies/: bodies.py
src/OC-solar/solarpanel/: solarpanel.py
src/OC-solar/trajectory/: kepler.py  orbit.py
src/solarchallenge/: constants.py  model.py
src/solarchallenge/bodies/: bodies.py
src/solarchallenge/propagator/: perturbations.py  propagator.py
src/solarchallenge/solarpanel/: heatflux.py  inverter.py  module.py  power.py  solarpanel.py  thermal.py  utils.py
src/solarchallenge/trajectory/: orbit.py  perturbations.py  propagator.py
src/solarchallenge/visualization/: plotting.py
tests/: _singlediode.py  test_orbit.py  test_perturbations.py  test_propagator.py
