[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "solarchallenge"
version = "0.0.1"

authors = ["Fabio Morgado"]

description = "Open Cosmos solar panel challenge."

#readme = "README.md"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]